[tool.poetry]
name = "sparta-twitterapi"
version = "0.1.58"
description = ""
authors = ["Andreas Neumeier <andreas.neumeier@unibw.de>", "Jasmin Riedl <jasmin.riedl@unibw.de>", "Lukas Metzner <lukas.metzner@unibw.de>", "Benedikt Radtke <benedikt.radtke@unibw.de>"]
readme = "README.md"
packages = [{include = "sparta", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10.12" # PSF
requests = "^2.32.3" # Apache 2.0
pydantic = "^2.9.2" # MIT
asyncio = "^3.4.3" # PSF
aiohttp = "^3.10.9" # Apache 2

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2" # MIT
black = "^24.10.0" # MIT
isort = "^5.13.2" # MIT
flake8 = "^7.1.1" # MIT
coverage = "^7.6.1" # Apache 2.0
pytest = "^8.3.3" # MIT
pytest-cov = "^4.1.0" # MIT
docformatter = {extras = ["tomli"], version = "^1.7.5"} # MIT
types-requests = "^2.32.0.20240914" # Apache 2.0
pytest-asyncio = "^0.23.5"

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.4.7" # BSD
sphinx-rtd-theme = "^2.0.0" # MIT
myst-parser = "^2.0.0" # MIT

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
no_implicit_optional = false

# Untyped Definitions and Calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

[[tool.mypy.overrides]]
module = "pycountry"
ignore_missing_imports = true

[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=160
skip="migrations"
profile="black"

[tool.black]
line-length=160

[tool.docformatter]
recursive = true
wrap-summaries = 160
wrap-descriptions = 160
